# learn-uv

./: README.md  pyproject.toml
bar/: pyproject.toml
foo/: hello.py  pyproject.toml
